--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sharpie",
+  "name": "write-lix",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -12,8 +12,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@auth/drizzle-adapter": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.8.1",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
@@ -22,6 +25,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
@@ -41,6 +45,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.44.7",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
@@ -51,6 +56,7 @@
     "drizzle-kit": "^0.20.9",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
+    "pg": "^8.11.3",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
