--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.6",
+    "jsdom": "^24.0.0",
     "lucide-react": "^0.334.0",
     "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.13",
@@ -45,6 +46,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-pdf": "^7.7.1",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.0",
@@ -59,6 +61,7 @@
     "@faker-js/faker": "^8.4.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.44.7",
+    "@types/jsdom": "^21.1.6",
     "@types/node": "^18.17.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
