--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dayjs": "^1.11.10",
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.6",
     "jsdom": "^24.0.0",
@@ -47,15 +48,18 @@
     "react-hook-form": "^7.50.1",
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
+    "react-resize-detector": "^10.0.1",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
+    "simplebar-react": "^3.2.4",
     "sonner": "^1.4.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.5.0",
     "vaul": "^0.9.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
