--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@hookform/resolvers": "^3.3.4",
     "@mantine/hooks": "^7.6.1",
     "@neondatabase/serverless": "^0.8.1",
+    "@next/third-parties": "^14.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
@@ -58,6 +60,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.5.0",
     "vaul": "^0.9.0",
+    "wavesurfer.js": "^7.7.4",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
