--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^0.7.0",
     "@hookform/resolvers": "^3.3.4",
+    "@langchain/openai": "^0.0.21",
+    "@langchain/pinecone": "^0.0.3",
     "@mantine/hooks": "^7.6.1",
     "@neondatabase/serverless": "^0.8.1",
     "@next/third-parties": "^14.1.3",
     "@paralleldrive/cuid2": "^2.2.2",
+    "@pinecone-database/pinecone": "^2.1.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -33,7 +36,10 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
-    "@uploadthing/react": "^6.3.0",
+    "@uploadthing/react": "^6.4.0",
+    "@upstash/ratelimit": "^1.0.1",
+    "@upstash/redis": "^1.28.4",
+    "ai": "^3.0.12",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -41,10 +47,13 @@
     "drizzle-orm": "^0.29.3",
     "framer-motion": "^11.0.6",
     "jsdom": "^24.0.0",
+    "langchain": "^0.1.28",
     "lucide-react": "^0.334.0",
     "next": "^14.0.4",
     "next-auth": "^5.0.0-beta.13",
     "next-themes": "^0.2.1",
+    "openai": "^4.29.1",
+    "pdf-parse": "^1.1.1",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -53,6 +62,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-pdf": "^7.7.1",
     "react-resize-detector": "^10.0.1",
+    "react-textarea-autosize": "^8.5.3",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
@@ -60,7 +70,7 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.5.0",
+    "uploadthing": "^6.6.0",
     "vaul": "^0.9.0",
     "wavesurfer.js": "^7.7.4",
     "zod": "^3.22.4",
