--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.50.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-markdown": "^9.0.1",
     "react-pdf": "^7.7.1",
     "react-resize-detector": "^10.0.1",
     "react-textarea-autosize": "^8.5.3",
+    "remark-gfm": "^4.0.0",
     "resend": "^3.2.0",
     "server-only": "^0.0.1",
     "simplebar-react": "^3.2.4",
