--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "openai": "^4.29.1",
     "pdf-parse": "^1.1.1",
     "postgres": "^3.4.3",
+    "puppeteer": "^22.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -75,6 +76,8 @@
     "uploadthing": "^6.6.0",
     "vaul": "^0.9.0",
     "wavesurfer.js": "^7.7.4",
+    "youtube-transcript": "^1.1.0",
+    "youtubei.js": "^9.1.0",
     "zod": "^3.22.4",
     "zustand": "^4.5.2"
   },
@@ -103,6 +106,5 @@
   },
   "ct3aMetadata": {
     "initVersion": "7.26.0"
-  },
-  "packageManager": "yarn@1.22.21"
+  }
 }
